[package]
name = "syft-parser"
version = "0.1.0"
edition = "2024"
description = "A tool to parse Syft JSON output and export to CSV or display as table"
authors = ["Alexey <classx@gmail.com>"]
license = "MIT"
homepage = "https://github.com/classx/syft-parser"
repository = "https://github.com/classx/syft-parser"
readme = "README.md"
keywords = ["syft", "sbom", "csv", "security", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
tabled = "0.15"

[profile.release]
strip = true
opt-level = "z"
lto = true           # Link Time Optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary size

[target.release]
rustflags = ["-C", "target-feature=+crt-static"]


# DEB package configuration
[package.metadata.deb]
maintainer = "Alexey <classx@gmail.com>"
copyright = "2025, Alexey <classx@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A command-line tool for parsing Syft JSON output files and converting them to CSV format
or displaying them as formatted tables. Supports SPDX license expression parsing and
handles complex license combinations."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/syft-parser", "usr/bin/syft-parser", "755"],
    ["README.md", "usr/share/doc/syft-parser/", "644"],
]

# RPM package configuration
[package.metadata.generate-rpm]
license = "MIT"
summary = "Parse Syft JSON output and export to CSV or table format"
post_install_script = "scripts/post_install.sh"
pre_uninstall_script = "scripts/pre_uninstall.sh"
assets = [
    { source = "target/release/syft-parser", dest = "/usr/bin/syft-parser", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/syft-parser/LICENSE", doc = true, mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/syft-parser/README.md", doc = true, mode = "0644" },

]



[package.metadata.generate-rpm.requires]
# No specific requirements for static binary

[[package.metadata.generate-rpm.files]]
source = "target/release/syft-parser"
dest = "/usr/bin/syft-parser"
mode = "755"

[[package.metadata.generate-rpm.files]]
source = "README.md"
dest = "/usr/share/doc/syft-parser/README.md"
mode = "644"
doc = true
